Bug 512348 - KMail crashing when pressing on "Server Info" button
Summary: KMail crashing when pressing on "Server Info" button
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-11-19 16:08 UTC by Bugs
Modified: 2025-11-20 06:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/163896/events/ceecccafcfdd4787b078d2c23f60afc5/


Attachments
New crash information added by DrKonqi (173.47 KB, text/plain)
2025-11-19 16:08 UTC, Bugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bugs 2025-11-19 16:08:08 UTC
Application: kmail (6.5.3 (25.08.3))

ApplicationNotResponding [ANR]: false
Qt Version: 6.10.0
Frameworks Version: 6.20.0
Operating System: Linux 6.17.8-arch1-1 x86_64
Windowing System: Wayland
Distribution: Arch Linux
DrKonqi: 6.5.3 [CoredumpBackend]

-- Information about the crash:
All it says then is
Error while getting server capabilities: No such method 'serverCapabilities' in interface 'org.kde.Akonadi.ImapResourceBase' at object path '/' (signature 'x')
The window becomes all garbled up and part of it is cut off, closing those windows will result in a crash.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#6  0x00007f5ee86989d3 in __pthread_kill_internal (threadid=<optimized out>, signo=6) at pthread_kill.c:89
#7  0x00007f5ee863e3a0 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007f5ee862557a in __GI_abort () at abort.c:77
#9  0x00007f5eddc280f4 in wl_abort (fmt=fmt@entry=0x7f5eddc2eaf0 "Tried to add event to destroyed queue\n") at ../wayland-1.24.0/src/wayland-util.c:476
#10 0x00007f5eddc2c83f in queue_event (display=<optimized out>, len=24) at ../wayland-1.24.0/src/wayland-client.c:1650
#11 read_events (display=<optimized out>) at ../wayland-1.24.0/src/wayland-client.c:1746
#12 wl_display_read_events (display=<optimized out>) at ../wayland-1.24.0/src/wayland-client.c:1829
#13 0x00007f5eddc9fd4f in QtWaylandClient::EventThread::run (this=0x558e35fab9d0) at /usr/src/debug/qt6-base/qtbase/src/plugins/platforms/wayland/qwaylanddisplay.cpp:194
#14 0x00007f5ee9130ca9 in operator() (__closure=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:437
#16 QThreadPrivate::start (arg=0x558e35fab9d0) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread_unix.cpp:397
#17 0x00007f5ee869698b in start_thread (arg=<optimized out>) at pthread_create.c:448
#18 0x00007f5ee871a9cc in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78


Reported using DrKonqi
Comment 1 Bugs 2025-11-19 16:08:10 UTC
Created attachment 186957 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Laurent Montel 2025-11-20 06:41:08 UTC
Git commit ea7f7454bac7ef6333c3bd42f65f936503cd231d by Laurent Montel.
Committed on 20/11/2025 at 06:40.
Pushed by mlaurent into branch 'master'.

Fix KMail crashing when pressing on "Server Info" button
We don't need argument. Now we can get info

M  +1    -1    resources/imap/serverinfodialog.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/ea7f7454bac7ef6333c3bd42f65f936503cd231d
Comment 3 Laurent Montel 2025-11-20 06:41:26 UTC
Git commit 9a78d9510a2ba47520563d3d3db31a66b9189251 by Laurent Montel.
Committed on 20/11/2025 at 06:41.
Pushed by mlaurent into branch 'release/25.12'.

Fix KMail crashing when pressing on "Server Info" button
We don't need argument. Now we can get info

(cherry picked from commit ea7f7454bac7ef6333c3bd42f65f936503cd231d)

M  +1    -1    resources/imap/serverinfodialog.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/9a78d9510a2ba47520563d3d3db31a66b9189251