Fix KMail crashing when pressing on "Server Info" button

BUG: 512348
We don't need argument. Now we can get info